# GammaPulsar

./: .gitignore  LICENSE  README.md  README.rst  dummpy_pyproject  environment.yml  setup.cfg  setup.py  test.py
GammaPulsar/: __init__.py  axis.py  config.py  data.py  fermi.py  fermi_config.py  makers.py  phases.py  serialize_analysis_config.yaml
GammaPulsar.egg-info/: PKG-INFO  SOURCES.txt
GammaPulsar/fermi/: __init__.py  data.py  makers.py
GammaPulsar/fermi/tests/: test_data.py  test_makers.py
GammaPulsar/utils/: __init__.py  exception.py  testing.py
examples/: fermi_phases.ipynb
fermiphase/: pint_phase.py
