[metadata]
name = GammaPulsar
description = A Python package for pulsar gamma-ray astronomy
license = BSD 3-Clause
license_files = LICENSE.rst
edit_on_github = False
github_project = MRegeard/GammaPulsar
url_raw_github = https://raw.githubusercontent.com/MRegeard/GammaPulsar/master/
platforms = any


[tool:isort]
profile = "black"
sections = STDLIB,PYTEST,NUMPY,ASTROPY,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
no_lines_before = STDLIB,PYTEST,NUMPY,ASTROPY,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_pytest = pytest
known_numpy = numpy,scipy
known_astropy = astropy,regions
known_first_party = gammapy
# Config to make isort compatible with black
# From https://black.readthedocs.io/en/stable/the_black_code_style.html
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88


[flake8]
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# W503: line break before binary operator
ignore = W503,E501
exclude = extern,conftest.py,__init__.py
extend-ignore = E203